# ModuleDevelopmentKit

./: .gitmodules  CMakeLists.txt  Common.rc  Database.cpp  Database.h  Log.cpp  Log.h  MSString.cpp  MSString.h  MasterServerMDK.h  Query.cpp  Query.h  README.MD  Server.cpp  Server.h  TemplateClient.cpp  TemplateServer.cpp  TemplateSocket.cpp  ThreadServer.cpp  Utility.cpp  centosworkaround.h
cmake/: FindLibUV.cmake  FindMariaDB.cmake
include/MDK/: Database.h  MDK_Definitions.h  MSString.h  MasterServerMDK.h  ModuleEntryPoint.h  Query.h  Server.h  TemplateClient.h  TemplateServer.h  TemplateSocket.h  ThreadServer.h  Utility.h
sqlite3/: CMakeLists.txt  MasterServer.db  masterserver_sqlite_create.sql
